# valenci-anndata

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  debug.py  example-usage.ipynb  jupyter_nbconvert_config.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docs/: README.ipynb  index.md  installation.md  onboarding.md  references.bib  references.md  usage-principles.md
docs/api/: datasets.md  preprocessing.md  scanpy.md  tools.md  viz.md
docs/css/: custom.css  footnote-references.css
docs/notebooks/: AA_test.ipynb  README.ipynb  _documentation-examples.ipynb  aufstehen-jupyter-scatter.ipynb  austehen-jupyter-scatter.ipynb  example-usage.ipynb
docs/overrides/partials/: nav.html
docs/tutorials/: aufstehen.md  basic-polis.md  kitchen-sink.md  notebook-assets  testing.md
src/valenci_anndata/: __init__.py
src/valenci_anndata/datasets/: polis.py
src/valency_anndata/: __init__.py
src/valency_anndata/datasets/: __init__.py  _load_aufstehen.py  _load_chile_protest.py  polis.py
src/valency_anndata/nbconvert/: preprocessors.py
src/valency_anndata/preprocessing/: __init__.py  _highly_variable_statements.py
src/valency_anndata/tools/: __init__.py  _kmeans.py  _pca.py  _polis.py  _polis2.py  _tsne.py  _umap.py
src/valency_anndata/viz/: __init__.py  _highly_variable_statements.py  _jupyter_scatter.py  _langevitour.py  _schematic_diagram.py  _voter_vignette.py
src/valency_anndata/viz/schematic_diagram/: __init__.py  _schematic.py  _svg_blocks.py  _utils.py
